--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,6 +24,19 @@ spring:
                   - INTERNAL_SERVER_ERROR
                   - BAD_GATEWAY
                   - SERVICE_UNAVAILABLE
+        - id: product
+          uri: lb://product-service
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: productService
+                fallbackUri: forward:/fallback
+                statusCodes:
+                  - INTERNAL_SERVER_ERROR
+                  - BAD_GATEWAY
+                  - SERVICE_UNAVAILABLE
 eureka:
   client:
     service-url:
