--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,12 @@
 spring:
   cloud:
     gateway:
+      server:
+        webflux:
+          discovery:
+            locator:
+              enabled: true
+              lower-case-service-id: true
       default-filters:
         - TokenRelay
         - PreserveHostHeader
@@ -50,6 +56,12 @@ spring:
                   - INTERNAL_SERVER_ERROR
                   - BAD_GATEWAY
                   - SERVICE_UNAVAILABLE
+  zipkin:
+    enabled: false
+
+management:
+  tracing:
+    enabled: false
 
 
 
