--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,18 @@ server:
   forward-headers-strategy: native
   max-http-request-header-size: 50MB
 
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_HOST:http://localhost:8761/eureka/}
+    fetch-registry: true
+    register-with-eureka: true
+    registry-fetch-interval-seconds: 5
+  instance:
+    prefer-ip-address: true
+    hostname: ${EUREKA_HOSTNAME:localhost}
+    lease-renewal-interval-in-seconds: 10
+
 resilience4j:
   circuitbreaker:
     instances:
